[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/TargetArrow.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/CubeBlue.png" type="Texture" id=3]
[ext_resource path="res://Assets/Items/helmet.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Sword.gd" type="Script" id=5]
[ext_resource path="res://Assets/Player/sword.png" type="Texture" id=6]
[ext_resource path="res://Assets/GUI/QuestNav.png" type="Texture" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.667, 1 )
colors = PoolColorArray( 1, 1, 1, 0.737255, 0.729412, 0.729412, 0.729412, 0.490196, 0.439216, 0.439216, 0.439216, 0.0980392 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="TargetArrow" type="Sprite" parent="."]
scale = Vector2( 1, -0.12 )
texture = ExtResource( 2 )
offset = Vector2( 140, 0 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.78, 0.78 )
texture = ExtResource( 3 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -9.13144, 12.6628, -12.5789, 9.06549, -12.4935, -9.33428, -9.20498, -12.3559, 9.19254, -12.4911, 12.3039, -9.24453, 12.3028, 9.36527, 9.15516, 12.513 )

[node name="Helmet" type="Sprite" parent="."]
position = Vector2( -0.0494003, -0.0702019 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
offset = Vector2( 0, -10.335 )

[node name="HelmetCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -10.1257, -31.6806, -14.1534, -31.6112, -14.0839, -29.9445, -16.0283, -29.6668, -16.0224, -20.1844, -13.7546, -15.8107, -12.1347, -15.4867, -12.0537, -9.89812, 11.9207, -9.65513, 11.9207, -15.4057, 13.7835, -15.7297, 15.9704, -19.6984, 15.9704, -29.5798, 13.9455, -29.8228, 13.8645, -31.6856, 10.1388, -31.6856, 10.0578, -29.8228, 11.9207, -26.9879, 9.78318, -23.4512, -9.826, -23.5364, -11.9727, -26.826 )

[node name="SwordContainer" type="Node2D" parent="."]

[node name="Sword" type="KinematicBody2D" parent="SwordContainer"]
position = Vector2( 4.10226, 2.68225 )
collision_layer = 514
collision_mask = 514
script = ExtResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="SwordContainer/Sword"]
position = Vector2( 20.3851, -9.2932 )
rotation = 2.52396
emitting = false
amount = 64
lifetime = 0.4
preprocess = 0.5
emission_shape = 2
emission_rect_extents = Vector2( 10, 1 )
color_ramp = SubResource( 1 )

[node name="Sword" type="Sprite" parent="SwordContainer/Sword"]
position = Vector2( -4.08448, -2.65488 )
texture = ExtResource( 6 )
offset = Vector2( 24.3876, -5.45147 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SwordContainer/Sword"]
polygon = PoolVector2Array( 6.32427, -1.10045, 6.32427, 0.936317, 7.29416, 0.887822, 7.29416, 2.8276, 6.32427, 2.8761, 6.27578, 3.84599, 5.35438, 3.84599, 5.30589, 6.80416, 7.29416, 6.85265, 7.24567, 5.88276, 8.26405, 5.88276, 8.26405, 4.91287, 9.18545, 4.86438, 9.28244, 3.94298, 10.2523, 3.94298, 10.3008, 4.76738, 11.2222, 4.76738, 11.3192, 5.68878, 13.3075, 5.73728, 13.2105, 5.00986, 14.1319, 4.81588, 14.1804, 3.94298, 15.2473, 3.79749, 15.2958, 0.839328, 16.3141, 0.839328, 16.3141, -1.05196, 15.1988, -1.10045, 15.2958, -2.07034, 16.2172, -2.16733, 16.2657, -3.18572, 17.187, -3.18572, 17.1386, -4.20411, 18.2054, -4.20411, 18.2539, -5.1255, 19.1753, -5.174, 19.3693, -6.14389, 20.2422, -6.09539, 20.2422, -7.16227, 21.2606, -7.11378, 21.3091, -8.13216, 22.2305, -8.13216, 22.2305, -9.05356, 23.2974, -9.05356, 23.2489, -10.1689, 24.3642, -10.1204, 24.3157, -11.0903, 25.2856, -11.0903, 25.2856, -12.1572, 26.304, -12.1087, 26.304, -13.1756, 27.3224, -13.1271, 27.2739, -14.1455, 28.2923, -14.1455, 28.2923, -15.2124, 29.2622, -15.1639, 29.3592, -16.0853, 30.1836, -16.1338, 30.2321, -17.2006, 31.202, -17.2006, 31.2505, -18.122, 32.3173, -18.122, 32.3173, -20.2073, 33.3357, -20.1103, 33.2872, -22.1471, 31.2505, -22.0016, 31.3475, -21.0802, 29.2622, -21.0802, 29.3592, -20.1103, 28.2438, -20.0618, 28.2923, -19.1889, 27.3224, -19.1404, 27.3224, -18.219, 26.2555, -18.122, 26.2555, -17.1521, 25.2371, -17.0552, 25.2371, -16.0853, 24.3157, -16.0853, 24.3157, -15.0669, 23.2489, -15.0669, 23.2489, -14.097, 22.279, -14.0485, 22.279, -13.1271, 21.3091, -13.1271, 21.3091, -12.1087, 20.2422, -12.1087, 20.2422, -11.0903, 19.2723, -11.0418, 19.3208, -10.1204, 18.3024, -10.0719, 18.3024, -9.10205, 17.284, -9.10205, 17.284, -8.13216, 16.3141, -8.13216, 16.3141, -7.16227, 15.2958, -7.16227, 15.2958, -6.14389, 14.3259, -6.14389, 14.3259, -5.174, 13.4045, -5.174, 13.3075, -4.15561, 10.2523, -4.10712, 10.2523, -3.08873, 8.31255, -3.08873, 8.31255, -2.11884, 7.24567, -2.11884, 7.24567, -1.10046 )
disabled = true

[node name="CamBox" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CamBox"]
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="QuestNav" type="Sprite" parent="."]
position = Vector2( 0.017786, 0.0401506 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )
offset = Vector2( 224.923, -0.0496317 )
